new options added